2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-database.c: (gconf_database_sync):
	* gconf/gconf-internals.c:
	* gconf/gconf-listeners.c:
	* gconf/gconf-sources.c: (gconf_sources_new_from_addresses):
	* gconf/gconf.c: (gconf_engine_unref), (gconf_shutdown_daemon):
	* gconf/gconfd.c: (gconf_server_load_sources),
	(gconfd_check_in_shutdown), (parse_listener_entry):
	* gconf/gconftool.c: (main), (do_spawn_daemon), (do_sync):
	More string reviews from Christian Rose and Adam Weinberger.
	Closes bug #318600.

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-backend.c: (gconf_backend_verify_vtable):
	* gconf/gconf-database.c: (gconf_database_add_listener):
	* gconf/gconfd.c: (logfile_save), (restore_client):
	* gconf/gconftool.c: (hash_install_foreach):
	String review by Clytie Siddall. Closes bug #315212

	configure.in: Bump version to 2.21.1 because of the string changes
	above.

2007-12-02  Ray Strode  <halfline@gnome.org>

	Plug a few leaks found and fixed by Matthias Clasen 
	(bug 475970)

	* gconf/gconf-database.c (gconf_database_notify_listeners):
	Clean up list of dead listeners

	* backends/xml-cache.c (cache_sync): clean up temporary list
	of syncs when we're done with it.

	* backends/markup-tree.c (markup_dir_free): free markup dir's
	list of entries before freeing the markup dir

2007-11-22  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-internals.c (gconf_key_key): Add check
	for NULL. Patch from Kimmo Hämäläinen. Bug #492342.

2007-11-08  Brian Cameron  <brian.cameron@sun.com>

	* gconf/gconfd.c: Remove calls to gconf_log from signal_handler
	  function since it is not safe to print debug messages in
	  non-reentrant signal handler functions.  This fixes problems we
	  were seeing on Solaris where GConf would hang on exit.  Reviewed
	  by Havoc Pennington and Ray Strode.  Refer to bug #466745.

2007-10-22  Owen Taylor  <otaylor@redhat.com>

	* gconf/Makefile.am (install-data-local): If there is an existing