@@ -1,5 +1,11 @@
 2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* NEWS: Update some.
+	* gconf/gconf.c: (gconf_valid_key):
+	Fix some more strings. Closes bug #429679.
+
+2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* gconf/gconf-database.c: (gconf_database_sync):
 	* gconf/gconf-internals.c:
 	* gconf/gconf-listeners.c:
